# lingoflow

./: .gitignore  LICENSE  README.md  TESTING_PLAN.md  pyproject.toml
assets/: LingoFlow.icns
manual_tests/: README.md
packaging/macos/: LingoFlow.spec  README.md  lingoflow_entry.py
scripts/: build_dmg.sh  build_macos_app.sh  check_macos_signing.sh  setup_local_signing_identity.sh
src/lingoflow/: __init__.py  app.py
src/lingoflow/config/: constants.py  settings.py
src/lingoflow/core/: app_state.py  hotkey.py  ocr.py  ports.py  translator.py
src/lingoflow/infrastructure/: clipboard.py  macos_permissions.py  ollama_client.py  single_instance.py  tasks.py
src/lingoflow/ui/: main_window.py  messages.py  ocr_workflow.py  onboarding_dialog.py  popup.py  settings_coordinator.py  settings_dialog.py  translation_workflow.py  tray_controller.py
src/lingoflow/utils/: logger.py
tests/: clipboard_test.py  conftest.py  hotkey_test.py  main_window_test.py  ocr_test.py  ollama_client_test.py  popup_test.py  settings_dialog_test.py  translator_test.py
tests/integration/: test_app_imports.py  test_packaging_metadata.py
tests/ui/: test_main_controller_workflows.py  test_popup.py  test_settings_coordinator.py  test_settings_dialog.py
tests/unit/: test_app_state.py  test_ocr_service.py  test_ollama_client.py  test_ports.py  test_settings.py  test_task_runner.py  test_translator.py
