[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lingoflow"
version = "0.1.0"
description = "A lightweight, Ollama-powered translation app with OCR support"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Shoucong", email = "your.email@example.com" }
]
keywords = ["translation", "ollama", "ocr", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "PyQt6>=6.5.0",
    "httpx>=0.25.0",
    "pynput>=1.7.6",
    "pytesseract>=0.3.10",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
lingoflow = "lingoflow.app:main"

[project.gui-scripts]
lingoflow-gui = "lingoflow.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lingoflow"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true